adding gin and corrected route
