# api/internal/handler/handler.go
@@ -1,13 +1,13 @@
 package handler
 
 import (
-	"assignment/api/internal/logger" // Import model for Swagger response
+	"assignment/api/internal/logger"
 	"assignment/api/internal/service"
 	"context"
-	"encoding/json"
 	"net/http"
 	"time"
 
+	"github.com/gin-gonic/gin"
 	"go.uber.org/zap"
 )
 
@@ -22,29 +22,28 @@ import (
 // @Success 200 {object} model.Country "Successfully retrieved country details"
 // @Failure 400 {object} map[string]string "Bad Request - Missing country name"
 // @Failure 500 {object} map[string]string "Internal Server Error"
-// @Router /countries/search [get]
-func SearchCountryHandler(svc service.CountryService) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
+// @Router /api/countries/search [get]
+func SearchCountryHandler(svc service.CountryService) gin.HandlerFunc {
+	return func(c *gin.Context) {
 		log := logger.GetLogger()
-		ctx, cancel := context.WithTimeout(r.Context(), 5*time.Second)
+		ctx, cancel := context.WithTimeout(c.Request.Context(), 5*time.Second)
 		defer cancel()
 
-		name := r.URL.Query().Get("name")
+		name := c.Query("name")
 		if name == "" {
 			log.Warn("Missing country name in request")
-			http.Error(w, "Missing country name", http.StatusBadRequest)
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Missing country name"})
 			return
 		}
 
 		country, err := svc.GetCountry(ctx, name)
 		if err != nil {
 			log.Error("Failed to get country data", zap.Error(err))
-			http.Error(w, err.Error(), http.StatusInternalServerError)
+			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 
 		log.Info("Country data retrieved successfully", zap.String("country", name))
-		w.Header().Set("Content-Type", "application/json")
-		json.NewEncoder(w).Encode(country)
+		c.JSON(http.StatusOK, country)
 	}
 }
